--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,42 @@ __pycache__
 prompts/
 debug_logs/
 data/
+
+# docs-viewer
+docs-viewer/public/advices/
+docs-viewer/dist/
+docs-viewer/node_modules/
+docs-viewer/.env
+docs-viewer/.env.*
+docs-viewer/.env.example
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Dependencies
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment variables
+.env
+.env.*
+!.env.example
