--- a/docs-viewer/vercel.json
+++ b/docs-viewer/vercel.json
@@ -25,5 +25,8 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "buildCommand": "npm run vercel-build",
+  "installCommand": "npm install",
+  "outputDirectory": "dist"
 } 
