--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ __pycache__
 .env
 prompts/
 debug_logs/
-data/**/*.json
+data/platforms/*.json
+data/alpha*.json
+
 
 # docs-viewer
 docs-viewer/public/advices/
