更新.gitignore文件，新增docs-viewer/public/tables/、docs-viewer/public/images/和docs-viewer/public/futures_symbols.json路径，以优化项目文件管理。

--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,15 @@ data/alpha*.json
 
 # docs-viewer
 docs-viewer/public/advices/
+docs-viewer/public/tables/
+docs-viewer/public/images/
+docs-viewer/public/futures_symbols.json
 docs-viewer/dist/
 docs-viewer/node_modules/
 docs-viewer/.env
 docs-viewer/.env.*
 docs-viewer/.env.example
+
 
 # Logs
 logs
