--- a/docs-viewer/package.json
+++ b/docs-viewer/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@vueuse/core": "^10.7.0",
     "@vueuse/head": "^1.0.0",
+    "chart.js": "^4.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "highlight.js": "^11.9.0",
     "marked": "^12.0.0",
     "react-markdown": "^10.1.0",
-    "vue": "^3.4.15"
+    "vue": "^3.4.15",
+    "vue-chartjs": "^5.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
